# mcp-servers

./: .gitmodules  README.md  azure.yaml  pyproject.toml
.github/instructions/: mcp-servers.instructions.md
.github/specs/: mcp-transport-capabilities.md  repository.md  workflows.md
.github/workflows/: ci.yml  deploy.yml
docs/: api-reference.md  architecture.md  contributing.md  mcp.md
src/: example_mcp_server_registry.json  function_app.py  host.json  mcp_server_schema.py  requirements.txt
src/aos_mcp_servers/: __init__.py  routing.py
tests/: __init__.py  test_mcp_routing.py  test_mcp_servers.py
